Fixes grunt and puts in Ken Burns effect

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,38 +1,106 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%- title %> | Global Connections</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="/styles/app.css">
-</head>
+    <title><%=typeof title == 'undefined' ? 'New Sails App' : title%></title>
 
-<body>
+    <!-- Viewport mobile tag for sensible mobile support -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
 
-      <a class="navbar-brand" href="#"><i class="fa fa-check"></i> Global Connections</a>
-    </div>
-    <div class="collapse navbar-collapse" style="width="100%">
-      <ul class="nav navbar-nav">
-        <li class="active">
-        <li><a href="/Home">Home</a></li>
-        <li><a href="/Survey">GuestSurvey</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
-<div>
-  <%- body %>
-</div>
+    <!--
+        Stylesheets and Preprocessors
+        ==============================
 
-<script type="text/javascript" src="/js/socket.io.js"></script>
-<script type="text/javascript" src="/js/sails.io.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/js/app.js"></script>
-</body>
+        You can always bring in CSS files manually with `<link>` tags, or asynchronously
+        using a solution like AMD (RequireJS).  Or, if you like, you can take advantage
+        of Sails' conventional asset pipeline (boilerplate Gruntfile).
+
+        By default, stylesheets from your `assets/styles` folder are included
+        here automatically (between STYLES and STYLES END). Both CSS (.css) and LESS (.less)
+        are supported. In production, your styles will be minified and concatenated into
+        a single file.
+
+        To customize any part of the built-in behavior, just edit `tasks/pipeline.js`.
+        For example, here are a few things you could do:
+
+            + Change the order of your CSS files
+            + Import stylesheets from other directories
+            + Use a different or additional preprocessor, like SASS, SCSS or Stylus
+    -->
+
+    <!--STYLES-->
+    <link rel="stylesheet" href="/styles/app.css">
+    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/ken-burns-effect.css">
+    <!--STYLES END-->
+  </head>
+
+  <body>
+    <div class="pic-wrapper">
+		  <figure class="pic-1"></figure>
+		  <figure class="pic-2"></figure>
+		  <figure class="pic-3"></figure>
+		  <figure class="pic-4"></figure>
+      <figure class="pic-5"></figure>
+		</div>
+    <%- body %>
+
+
+
+    <!--
+        Client-side Templates
+        ========================
+
+        HTML templates are important prerequisites of modern, rich client applications.
+        To work their magic, frameworks like Backbone, Angular, Ember, and Knockout require
+        that you load these templates client-side.
+
+        By default, your Gruntfile is configured to automatically load and precompile
+        client-side JST templates in your `assets/templates` folder, then
+        include them here automatically (between TEMPLATES and TEMPLATES END).
+
+        To customize this behavior to fit your needs, just edit `tasks/pipeline.js`.
+        For example, here are a few things you could do:
+
+            + Import templates from other directories
+            + Use a different template engine (handlebars, jade, dust, etc.)
+            + Internationalize your client-side templates using a server-side
+              stringfile before they're served.
+    -->
+
+    <!--TEMPLATES-->
+    
+    <!--TEMPLATES END-->
+
+
+    <!--
+
+      Client-side Javascript
+      ========================
+
+      You can always bring in JS files manually with `script` tags, or asynchronously
+      on the client using a solution like AMD (RequireJS).  Or, if you like, you can
+      take advantage of Sails' conventional asset pipeline (boilerplate Gruntfile).
+
+      By default, files in your `assets/js` folder are included here
+      automatically (between SCRIPTS and SCRIPTS END).  Both JavaScript (.js) and
+      CoffeeScript (.coffee) are supported. In production, your scripts will be minified
+      and concatenated into a single file.
+
+      To customize any part of the built-in behavior, just edit `tasks/pipeline.js`.
+      For example, here are a few things you could do:
+
+          + Change the order of your scripts
+          + Import scripts from other directories
+          + Use a different preprocessor, like TypeScript
+
+    -->
+
+    <!--SCRIPTS-->
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/home.js"></script>
+    <script src="/js/questionbuttons.js"></script>
+    <script src="/js/survey.js"></script>
+    <!--SCRIPTS END-->
+  </body>
 </html>
