--- a/views/GuestSurvey/Survey.ejs
+++ b/views/GuestSurvey/Survey.ejs
@@ -1,39 +1,3 @@
-<head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script>
-  $(document).ready(function(){
-      $("#trigger").click(function(){
-        if (!$('#gc1').hasClass("newClass"))
-        {
-          $("#gc1").toggleClass("newClass");
-          $("#gc2").toggleClass("newClass");
-        }
-        else if (!$('#gc2').hasClass("newClass"))
-        {
-          $("#gc2").toggleClass("newClass");
-          $("#gc3").toggleClass("newClass");
-        }
-        else if (!$('#gc3').hasClass("newClass"))
-        {
-          $("#gc3").toggleClass("newClass");
-          $("#gc4").toggleClass("newClass");
-        }
-        else if (!$('#gc4').hasClass("newClass"))
-        {
-          $("#gc4").toggleClass("newClass");
-          $("#gc5").toggleClass("newClass");
-        }
-        else if (!$('#gc5').hasClass("newClass"))
-        {
-          $("#gc1").toggleClass("newClass");
-          $("#gc2").toggleClass("newClass");
-          $("#gc3").toggleClass("newClass");
-          $("#gc4").toggleClass("newClass");
-        }
-      });
-  });
-</script>
-</head>
 <body>
   <form>
     <div id="gc1">
@@ -57,5 +21,5 @@
       <input type="number" name="inflation" min="0" max="25" step=".5" value="3"><br>
     </div>
   </form>
-  <a id="trigger"><img class="thumbpic" src="images/thumbsup.jpg"></a>
+  <a id="trigger"><img class="thumbpic" src="/images/ThumbsUp.jpg"></a>
 </body>
