--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -3,22 +3,68 @@
   float:left;
   text-align: center;
 }
-.homepage{
-  width: 1200px;
-  align-items: center;
+
+body {
   margin: auto;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.planlink {
+  margin: 0px 30px 20px 30px;
+  float:left;
+  text-align: center;
+  border: 1px #bbbbbb solid;
+  height: 300px;
+  width: 250px;
+  font-style: : cursive cursive ariel;
 }
 
 img.subpic {
   float: bottom;
-  height: 350px;
-  width: 500px;
+  height: 250px;
+  width: 450px;
   border-radius: 175px;
 	-webkit-border-radius: 175px;
 	-moz-border-radius: 175px;
+}
+
+img.shadow {
   box-shadow: 0 0 15px rgba(0, 0, 0, 3);
-	-webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 3);
-	-moz-box-shadow: 0 0 15px rgba(0, 0, 0, 3);
+  -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 3);
+  -moz-box-shadow: 0 0 15px rgba(0, 0, 0, 3);
+}
+img.darken:hover {
+  -webkit-filter: brightness(30%);
+  filter: brightness(30%);
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition: all 1s ease;
+}
+img.back{
+  z-index:-1;
+}
+#rotating-item-wrapper {
+    position: relative;
+    width: 980px;
+    height: 347px;
+}
+.rotating-item {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.planpic {
+  float: bottom;
+  height: 225px;
+  width: 240px;
+  border: 1px black solid;
+  margin-left: -278px;
+  margin-top: 15px;
 }
 img.thumbpic {
   float: bottom;
@@ -27,25 +73,11 @@ img.thumbpic {
   border-radius: 75px;
 	-webkit-border-radius: 75px;
 	-moz-border-radius: 75px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 3);
-	-webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 3);
-	-moz-box-shadow: 0 0 15px rgba(0, 0, 0, 3);
 }
 
 .newClass{visibility: hidden}
 
-img {
-   -webkit-transition: all 1s ease;
-   -moz-transition: all 1s ease;
-   -o-transition: all 1s ease;
-   -ms-transition: all 1s ease;
-   transition: all 1s ease;
-}
 
-img:hover {
-   -webkit-filter: brightness(30%);
-   filter: brightness(30%);
-}
 
 .hiddentext{
   font-size: 35px;
@@ -55,16 +87,47 @@ img:hover {
   font-style: italic;
   text-shadow: 2px 2px #000000
 }
-
-form {
-  font-size: 60px;
+.plantext{
+  font-size: 25px;
+  color: #000000;
+  font-weight: bold;
+  font-family: cursive, Geneva, serif;
+  font-style: italic;
+  text-shadow: 2px 2px #000000;
+  margin-top: -350px;
+  margin-left: 75px;
 }
 
+.Questionnare {
+  margin: 60px 60px 60px 350px;
+}
+.Q-img {
+  margin: 60px;
+}
+.Q-thumb {
+  margin-top: -350px;
+  margin-right: 350px;
+  float: right;
+}
+.Q-text {
+  font-size: 20px;
+  color: #007700;
+  font-weight: bold;
+  font-family: Verdana, Geneva, serif;
+  font-style: italic;
+  text-shadow: 2px 2px #000000
+  margin-top: 10px;
+  margin-left: 10px;
+}
+.right-text {
+  text-align: right;
+}
+form {
+  font-size: 30px;
+}
 input {
   border: none;
-
 }
-
 input:focus {
   border: none;
 }
