Moves scripts to bottom of body

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%=typeof title == 'undefined' ? 'New Sails App' : title%></title>
+    <title><%=typeof title == 'undefined' ? 'GC Guest Survey' : title%></title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -33,15 +33,6 @@
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/ken-burns-effect.css">
     <!--STYLES END-->
-
-    <!--SCRIPTS-->
-    <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/js/home.js"></script>
-    <script src="/js/imageroller.js"></script>
-    <script src="/js/questionbuttons.js"></script>
-    <script src="/js/survey.js"></script>
-    <!--SCRIPTS END-->
-
   </head>
 
   <body>
@@ -79,7 +70,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -105,7 +96,13 @@
           + Use a different preprocessor, like TypeScript
 
     -->
-
+    <!--SCRIPTS-->
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/home.js"></script>
+    <script src="/js/imageroller.js"></script>
+    <script src="/js/questionbuttons.js"></script>
+    <script src="/js/survey.js"></script>
+    <!--SCRIPTS END-->
 
   </body>
 </html>
