Adds bower and required JS

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,7 +30,9 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/app.css">
+    <link rel="stylesheet" href="/styles/css/dataTables.bootstrap.css">
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/infinite-rotator.css">
     <link rel="stylesheet" href="/styles/ken-burns-effect.css">
     <!--STYLES END-->
   </head>
@@ -70,7 +72,7 @@
     -->
 
     <!--TEMPLATES-->
-
+    
     <!--TEMPLATES END-->
 
 
@@ -98,8 +100,12 @@
     -->
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dist/jquery.js"></script>
     <script src="/js/home.js"></script>
     <script src="/js/imageroller.js"></script>
+    <script src="/js/infinite-rotator.js"></script>
+    <script src="/js/js/dataTables.bootstrap.js"></script>
+    <script src="/js/js/jquery.dataTables.js"></script>
     <script src="/js/questionbuttons.js"></script>
     <script src="/js/survey.js"></script>
     <!--SCRIPTS END-->
