--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9,6 +9,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+  z-index: 0;
 }
 
 .planlink {
@@ -130,4 +131,18 @@ input {
 }
 input:focus {
   border: none;
+}
+
+.center-frame {
+  display: block;
+  z-index: 200 !important;
+}
+
+.semi-transparent-background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #DDDDDD;
+  z-index: 0 !important;
+  opacity: .5;
 }
