--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -72,7 +72,7 @@
     -->
 
     <!--TEMPLATES-->
-
+    
     <!--TEMPLATES END-->
 
 
@@ -104,6 +104,7 @@
     <script src="/js/home.js"></script>
     <script src="/js/imageroller.js"></script>
     <script src="/js/infinite-rotator.js"></script>
+    <script src="/js/js/dataTables.bootstrap.js"></script>
     <script src="/js/js/jquery.dataTables.js"></script>
     <script src="/js/questionbuttons.js"></script>
     <script src="/js/survey.js"></script>
