--- a/views/Home/index.ejs
+++ b/views/Home/index.ejs
@@ -17,7 +17,7 @@
     </div>
 
     <div class="homelink">
-      <a href="/Survey"><img class="subpic darken shadow" src="/images/london.jpg"></a>
+      <a href="/About"><img class="subpic darken shadow" src="/images/london.jpg"></a>
       <div class="hiddentext">HelpLine</div>
     </div>
   </div>
