--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -1,5 +1,6 @@
-<html>
-  <body>
+<div class="homepage">
+  <div class="center-frame">
+    <div class="semi-transparent-background"></div>
     <table>
       <tr>
         <td>
@@ -38,5 +39,5 @@
         </td>
       </tr>
     </table>
-  </body>
-</html>
+  </div>
+</div>
