--- a/views/About/index.ejs
+++ b/views/About/index.ejs
@@ -1,4 +1,9 @@
-<p class="lead">This is an example application to show how to use Sails.js with Angular.
-  If you would like to follow along with how it was created, check out this
-  <a href="http://www.tysoncadenhead.com/blog/sails-ninja-intro">blog series</a>
-  that walks you through step by step.</p>
+<div class="homepage">
+  <div class="center-frame">
+    <div class="semi-transparent-background"></div>
+      <p class="lead">This is an example application to show how to use Sails.js with Angular.
+        If you would like to follow along with how it was created, check out this
+        <a href="http://www.tysoncadenhead.com/blog/sails-ninja-intro">blog series</a>
+        that walks you through step by step.</p>
+    </div>
+</div>
