--- a/views/Planning/page2.ejs
+++ b/views/Planning/page2.ejs
@@ -1,6 +1,5 @@
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js?ver=3.0.1"></script><script type="text/javascript" src="js/infinite-rotator.js"></script>
 <script>
-$(window).load(function() { //start after HTML, images have loaded
+$(window).on('load', function() { //start after HTML, images have loaded
 
     var InfiniteRotator =
     {
@@ -43,34 +42,36 @@ $(window).load(function() { //start after HTML, images have loaded
 
 });
 </script>
-
-<form class="Questionnare">
-  <table>
-    <tr>
-      <td class="right-text">Would you like to upgrade to a 2-bed?</td>
-      <td><input type='checkbox' name="2bed"></td>
-    </tr>
-    <tr>
-      <td class="right-text">3-bed?</td>
-      <td><input type="checkbox" name="3bed"></td>
-    </tr>
-    <tr>
-      <td class="right-text">Will you travel between March and August?</td>
-      <td><input type="checkbox" name="peek"></td>
-    </tr>
-  </table>
-</form>
-
-
-<div id="rotating-item-wrapper" class="Q-img">
- <img class="rotating-item shadow" src="/images/ireland/ireland1.jpg"/ width="650" height="300">
- <img class="rotating-item shadow" src="/images/ireland/ireland2.jpg"/ width="650" height="300">
- <img class="rotating-item shadow" src="/images/ireland/ireland3.jpg"/ width="650" height="300">
- <img class="rotating-item shadow" src="/images/ireland/ireland4.jpg"/ width="650" height="300">
- <img class="rotating-item shadow" src="/images/ireland/ireland5.jpg"/ width="650" height="300">
- <div class="Q-text">Your Chosen Destination</div>
-</div>
-<pre>
+<div class="homepage">
+  <div class="center-frame">
+    <div class="semi-transparent-background"></div>
+    <form class="Questionnare">
+      <table>
+        <tr>
+          <td class="right-text">Would you like to upgrade to a 2-bed?</td>
+          <td><input type='checkbox' name="2bed"></td>
+        </tr>
+        <tr>
+          <td class="right-text">3-bed?</td>
+          <td><input type="checkbox" name="3bed"></td>
+        </tr>
+        <tr>
+          <td class="right-text">Will you travel between March and August?</td>
+          <td><input type="checkbox" name="peek"></td>
+        </tr>
+      </table>
+    </form>
 
 
-  <a id="trigger"><img class="thumbpic shadow Q-img Q-thumb" src="/images/ThumbsUp.jpg"></a>
+    <div id="rotating-item-wrapper" class="Q-img">
+     <img class="rotating-item shadow" src="/images/ireland/ireland1.jpg"/ width="650" height="300">
+     <img class="rotating-item shadow" src="/images/ireland/ireland2.jpg"/ width="650" height="300">
+     <img class="rotating-item shadow" src="/images/ireland/ireland3.jpg"/ width="650" height="300">
+     <img class="rotating-item shadow" src="/images/ireland/ireland4.jpg"/ width="650" height="300">
+     <img class="rotating-item shadow" src="/images/ireland/ireland5.jpg"/ width="650" height="300">
+     <div class="Q-text">Your Chosen Destination</div>
+    </div>
+
+      <a id="trigger"><img class="thumbpic shadow Q-img Q-thumb" src="/images/ThumbsUp.jpg"></a>
+    </div>
+  </div>
