--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,17 +27,30 @@
             + Import stylesheets from other directories
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
-
+    <!--SCRIPTS-->
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dist/jquery.js"></script>
+    <script src="/js/home.js"></script>
+    <script src="/js/imageroller.js"></script>
+    <script src="/js/infinite-rotator.js"></script>
+    <script src="/js/js/dataTables.bootstrap.js"></script>
+    <script src="/js/js/jquery.dataTables.js"></script>
+    <script src="/js/odometer.js"></script>
+    <script src="/js/questionbuttons.js"></script>
+    <script src="/js/survey.js"></script>
+    <!--SCRIPTS END-->
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/app.css">
     <link rel="stylesheet" href="/styles/css/dataTables.bootstrap.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/infinite-rotator.css">
     <link rel="stylesheet" href="/styles/ken-burns-effect.css">
+    <link rel="stylesheet" href="/styles/odometer.css">
     <!--STYLES END-->
   </head>
 
   <body>
+    <a href="/"><img class="darken shadow homeicon" src="/images/home.jpg"></a>
     <%- body %>
     <div class="pic-wrapper" style="z-index:-1;">
 		  <figure class="pic-1"></figure>
@@ -98,16 +111,6 @@
           + Use a different preprocessor, like TypeScript
 
     -->
-    <!--SCRIPTS-->
-    <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/js/dist/jquery.js"></script>
-    <script src="/js/home.js"></script>
-    <script src="/js/imageroller.js"></script>
-    <script src="/js/infinite-rotator.js"></script>
-    <script src="/js/js/dataTables.bootstrap.js"></script>
-    <script src="/js/js/jquery.dataTables.js"></script>
-    <script src="/js/questionbuttons.js"></script>
-    <script src="/js/survey.js"></script>
-    <!--SCRIPTS END-->
+
   </body>
 </html>
