--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -11,7 +11,11 @@ body {
   height: 100%;
   z-index: 0;
 }
-
+.homeicon {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+}
 .planlink {
   margin: 0px 30px 20px 30px;
   float:left;
@@ -67,22 +71,55 @@ img.back{
   margin-left: -278px;
   margin-top: 15px;
 }
-img.thumbpic {
-  float: bottom;
+.thumbpic {
   height: 150px;
   width: 150px;
   border-radius: 75px;
 	-webkit-border-radius: 75px;
 	-moz-border-radius: 75px;
+  position: fixed;
+  top: 60%;
+  left: 70%;
 }
-
+.surveykeys {
+  height: 200px;
+  width: 200px;
+  position: fixed;
+  top: 50%;
+  left: 60%;
+}
 .newClass{visibility: hidden}
 
-
-
+.arrow {
+  height:100px;
+  width: 100px;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+}
+.arrow:hover {
+  -webkit-filter: brightness(50%);
+  filter: brightness(50%);
+}
+#surveyvalue {
+  font-size: 30px;
+  width: 100px;
+  float:center;
+  text-align: center;
+  font-family: impact, Geneva, serif;
+  border:
+}
 .hiddentext{
   font-size: 35px;
   color: #007700;
+  font-weight: bold;
+  font-family: Verdana, Geneva, serif;
+  font-style: italic;
+  text-shadow: 2px 2px #000000
+}
+.surveytext{
+  font-size: 35px;
+  color: #ffffff;
   font-weight: bold;
   font-family: Verdana, Geneva, serif;
   font-style: italic;
@@ -102,14 +139,7 @@ img.thumbpic {
 .Questionnare {
   margin: 60px 60px 60px 350px;
 }
-.Q-img {
-  margin: 60px;
-}
-.Q-thumb {
-  margin-top: -350px;
-  margin-right: 350px;
-  float: right;
-}
+
 .Q-text {
   font-size: 20px;
   color: #007700;
@@ -120,11 +150,19 @@ img.thumbpic {
   margin-top: 10px;
   margin-left: 10px;
 }
+.Q-img {
+  width: 750px;
+  height: 390px;
+  position: absolute;
+  bottom: 0;
+  border-radius: 10px;
+
+}
 .right-text {
   text-align: right;
 }
 form {
-  font-size: 30px;
+  font-size: 40px;
 }
 input {
   border: none;
