--- a/views/GuestSurvey/Survey2.ejs
+++ b/views/GuestSurvey/Survey2.ejs
@@ -1,7 +1,7 @@
 <div class="homepage">
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
-      <table>
+      <table class="surveytext">
         <tr>
           <td>How many people will vacation together?</td>
           <td id="survey1"></td>
@@ -19,10 +19,46 @@
           <td id="survey4"></td>
         </tr>
         <tr>
-          <td>What do you think the inflation will be for the next 10 years?</td>
+          <td>What will inflation be in the next 10 years?</td>
           <td id="survey5"></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td style="text-align: right;">----------</td>
+        </tr>
+        <tr>
+          <td id="surveydesc"></td>
+          <td id="survey6"></td>
         </tr>
       </table>
     </div>
   </div>
 </div>
+<script language="JavaScript">
+
+	function addComment()
+	{
+		var parameters = location.search.substring(1).split("&");
+
+		var temp = parameters[0].split("=");
+		q1 = parseInt(unescape(temp[1]));
+		temp = parameters[1].split("=");
+		q2 = parseInt(unescape(temp[1]));
+    temp = parameters[2].split("=");
+    q3 = parseInt(unescape(temp[1]));
+    temp = parameters[3].split("=");
+		q4 = parseInt(unescape(temp[1]));
+    temp = parameters[4].split("=");
+    q5 = parseInt(unescape(temp[1]));
+
+		document.getElementById("survey1").innerHTML = q1;
+		document.getElementById("survey2").innerHTML = q2;
+    document.getElementById("survey3").innerHTML = q3;
+    document.getElementById("survey4").innerHTML = q4;
+    document.getElementById("survey5").innerHTML = q5;
+    document.getElementById("survey6").innerHTML = parseFloat(Math.ceil(q1/2)*q2*q3*(Math.pow(1+(.01*q5),q4)-1)/(.01*q5)).toFixed(2);
+    document.getElementById("surveydesc").innerHTML = 'Total Cost of Vacationing for the next ' + String(q4) + ' years:'
+	}
+addComment();
+
+</script>
