--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -5,37 +5,37 @@
       <tr>
         <td>
             <img class="planlink shadow" src="images/ireland/polaroidireland.jpg">
-            <a href="Questionnare"><img class="planpic darken" src="images/ireland/ireland1.jpg"></a>
+            <a href="Questionnare?loc=ireland&"><img class="planpic darken" src="images/ireland/p1.jpg"></a>
         </td>
         <td>
             <img class="planlink shadow" src="images/pr/polaroidpr.jpg">
-            <a href="Questionnare"><img class="planpic darken" src="images/pr/pr1.jpg"></a>
+            <a href="Questionnare?loc=pr&"><img class="planpic darken" src="images/pr/p1.jpg"></a>
         </td>
         <td>
             <img class="planlink shadow" src="images/fiji/polaroidfiji.jpg">
-            <a href="Questionnare"><img class="planpic darken" src="images/fiji/fiji1.jpg"></a>
+            <a href="Questionnare?loc=fiji&"><img class="planpic darken" src="images/fiji/p1.jpg"></a>
         </td>
         <td>
             <img class="planlink shadow" src="images/hawaii/polaroidhawaii.jpg">
-            <a href="Questionnare"><img class="planpic darken" src="images/hawaii/hawaii1.jpg"></a>
+            <a href="Questionnare?loc=hawaii&"><img class="planpic darken" src="images/hawaii/p1.jpg"></a>
         </td>
       </tr>
       <tr>
         <td>
           <img class="planlink shadow" src="images/tokyo/polaroidtokyo.jpg">
-          <a href="Questionnare"><img class="planpic darken" src="images/tokyo/tokyo1.jpg"></a>
+          <a href="Questionnare?loc=tokyo&"><img class="planpic darken" src="images/tokyo/p1.jpg"></a>
         </td>
         <td>
             <img class="planlink shadow" src="images/italy/polaroiditaly.jpg">
-            <a href="Questionnare"><img class="planpic darken" src="images/italy/italy1.jpg"></a>
+            <a href="Questionnare?loc=italy&"><img class="planpic darken" src="images/italy/p1.jpg"></a>
         </td>
         <td>
             <img class="planlink shadow" src="images/rio/polaroidrio.jpg">
-            <a href="Questionnare"><img class="planpic darken" src="images/rio/rio1.jpg"></a>
+            <a href="Questionnare?loc=rio&"><img class="planpic darken" src="images/rio/p1.jpg"></a>
         </td>
         <td>
             <img class="planlink shadow" src="images/sydney/polaroidsydney.jpg">
-            <a href="Questionnare"><img class="planpic darken" src="images/sydney/sydney1.jpg"></a>
+            <a href="Questionnare?loc=sydney&"><img class="planpic darken" src="images/sydney/p1.jpg"></a>
         </td>
       </tr>
     </table>
