--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,12 +31,11 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dist/jquery.js"></script>
     <script src="/js/home.js"></script>
-    <script src="/js/imageroller.js"></script>
     <script src="/js/infinite-rotator.js"></script>
     <script src="/js/js/dataTables.bootstrap.js"></script>
     <script src="/js/js/jquery.dataTables.js"></script>
     <script src="/js/odometer.js"></script>
-    <script src="/js/questionbuttons.js"></script>
+    <script src="/js/splitparams.js"></script>
     <script src="/js/survey.js"></script>
     <!--SCRIPTS END-->
     <!--STYLES-->
