--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -1,23 +1,31 @@
 <div class="homepage">
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
-      <table>
+      <form action="/Survey2" name="survey">
+        <table>
         <tr>
           <td id="gc1" class="surveytext">How many people will vacation together?</td>
+          <input id="q1" class="permhidden" type="number" name="q1">
         </tr>
         <tr>
           <td id="gc2" class="surveytext newClass">What will a hotel generally cost per night?</td>
+          <input id="q2" class="permhidden" type="number" name="q2">
         </tr>
         <tr>
           <td id="gc3" class="surveytext newClass">How many days do you vacation in a year?</td>
+          <input id="q3" class="permhidden" type="number" name="q3">
         </tr>
         <tr>
           <td id="gc4" class="surveytext newClass">How many years do you plan on vacationing?</td>
+          <input id="q4" class="permhidden" type="number" name="q4">
         </tr>
         <tr>
-          <td id="gc5" class="surveytext newClass">What do you think the inflation will be for the next 10 years?</td>
+          <td id="gc5" class="surveytext newClass">What do you think inflation will be in the next 10 years?</td>
+          <input id="q5" class="permhidden" type="number" name="q5">
         </tr>
+        <input class="permhidden" type="submit">
       </table>
+    </form>
       <a id="trigger"><img class="thumbpic darken" src="/images/ThumbsUp.jpg"></a>
       <table class="surveykeys">
         <tr>
