--- a/views/Home/index.ejs
+++ b/views/Home/index.ejs
@@ -2,22 +2,22 @@
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
     <div class="homelink">
-      <a href="/Survey"><img class="subpic darken shadow" src="/images/skilodge.jpg"></a>
+      <a href="/Survey"><img class="subpic darken shadow spin" src="/images/skilodge.jpg"></a>
       <div class="hiddentext">Guest Survey</div>
     </div>
 
     <div class="homelink">
-      <a href="/Planning"><img class="subpic darken shadow" src="/images/luau.jpg"></a>
+      <a href="/Planning"><img class="subpic darken shadow spin" src="/images/luau.jpg"></a>
       <div class="hiddentext">Vacation Planning</div>
     </div>
 
     <div class="homelink">
-      <a href="/Survey"><img class="subpic darken shadow" src="/images/yurts.jpg"></a>
+      <a href="/Survey"><img class="subpic darken shadow spin" src="/images/yurts.jpg"></a>
       <div class="hiddentext">Accommodations</div>
     </div>
 
     <div class="homelink">
-      <a href="/About"><img class="subpic darken shadow" src="/images/london.jpg"></a>
+      <a href="/About"><img class="subpic darken shadow spin" src="/images/london.jpg"></a>
       <div class="hiddentext">HelpLine</div>
     </div>
   </div>
