--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -3,37 +3,37 @@
     <div class="semi-transparent-background"></div>
     <table>
       <tr>
-        <td>
+        <td class="tilt">
             <img class="planlink shadow" src="images/ireland/polaroidireland.jpg">
             <a href="Questionnare?loc=ireland&"><img class="planpic darken" src="images/ireland/p1.jpg"></a>
         </td>
-        <td>
+        <td class="tilt">
             <img class="planlink shadow" src="images/pr/polaroidpr.jpg">
             <a href="Questionnare?loc=pr&"><img class="planpic darken" src="images/pr/p1.jpg"></a>
         </td>
-        <td>
+        <td class="tilt">
             <img class="planlink shadow" src="images/fiji/polaroidfiji.jpg">
             <a href="Questionnare?loc=fiji&"><img class="planpic darken" src="images/fiji/p1.jpg"></a>
         </td>
-        <td>
+        <td class="tilt">
             <img class="planlink shadow" src="images/hawaii/polaroidhawaii.jpg">
             <a href="Questionnare?loc=hawaii&"><img class="planpic darken" src="images/hawaii/p1.jpg"></a>
         </td>
       </tr>
       <tr>
-        <td>
+        <td class="tilt">
           <img class="planlink shadow" src="images/tokyo/polaroidtokyo.jpg">
           <a href="Questionnare?loc=tokyo&"><img class="planpic darken" src="images/tokyo/p1.jpg"></a>
         </td>
-        <td>
+        <td class="tilt">
             <img class="planlink shadow" src="images/italy/polaroiditaly.jpg">
             <a href="Questionnare?loc=italy&"><img class="planpic darken" src="images/italy/p1.jpg"></a>
         </td>
-        <td>
+        <td class="tilt">
             <img class="planlink shadow" src="images/rio/polaroidrio.jpg">
             <a href="Questionnare?loc=rio&"><img class="planpic darken" src="images/rio/p1.jpg"></a>
         </td>
-        <td>
+        <td class="tilt">
             <img class="planlink shadow" src="images/sydney/polaroidsydney.jpg">
             <a href="Questionnare?loc=sydney&"><img class="planpic darken" src="images/sydney/p1.jpg"></a>
         </td>
