--- a/views/Planning/page2.ejs
+++ b/views/Planning/page2.ejs
@@ -31,7 +31,7 @@
      <div class="Q-text">Your Chosen Destination</div>
     </div>
 
-      <a id="trigger"><img class="thumbpic darken" src="/images/ThumbsUp.jpg"></a>
+      <a id="trigger"><img class="thumbpic darken shadowrotate" src="/images/ThumbsUp.jpg"></a>
     </div>
   </div>
 
