--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -189,3 +189,38 @@ input:focus {
   border-radius: 1em;
   opacity: .5;
 }
+.shadowrotate:hover {
+  box-shadow: 0 0 45px rgba(0, 0, 0, 3);
+  -webkit-box-shadow: 0 0 45px rgba(0, 0, 0, 3);
+  -moz-box-shadow: 0 0 45px rgba(0, 0, 0, 3);
+  margin-right: 20px;
+}
+.spin {
+  -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+       -o-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+          transition: all 0.5s ease;
+}
+.tilt {
+  -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+       -o-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+          transition: all 0.5s ease;
+}
+.tilt:hover {
+  -webkit-transform: rotate(10deg);
+     -moz-transform: rotate(10deg);
+       -o-transform: rotate(10deg);
+      -ms-transform: rotate(10deg);
+          transform: rotate(10deg);
+}
+.spin:hover {
+  radius-border: 25%;
+  -webkit-transform: rotate(360deg);
+     -moz-transform: rotate(360deg);
+       -o-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
+}
