--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -36,7 +36,6 @@
     <script src="/js/js/jquery.dataTables.js"></script>
     <script src="/js/odometer.js"></script>
     <script src="/js/splitparams.js"></script>
-    <script src="/js/survey.js"></script>
     <!--SCRIPTS END-->
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/app.css">
@@ -110,6 +109,6 @@
           + Use a different preprocessor, like TypeScript
 
     -->
-
+    <%- blocks.localScripts %>
   </body>
 </html>
