--- a/views/Planning/page2.ejs
+++ b/views/Planning/page2.ejs
@@ -20,7 +20,9 @@
         </tr>
       </table>
     </form>
-
+    <a id="printbutton" href="http://www.printfriendly.com" style="color:#6D9F00;text-decoration:none;" class="printfriendly" onclick="window.print();return false;" title="Printer Friendly and PDF">
+      <img style="border:none;-webkit-box-shadow:none;box-shadow:none;" src="http://cdn.printfriendly.com/pf-button-big.gif" alt="Print Friendly and PDF"/>
+    </a>
 
     <div id="rotating-item-wrapper" class="Q-img">
      <img id="planpic1" class="rotating-item shadow Q-img" src="images/ireland/p1.jpg"/>
@@ -32,6 +34,7 @@
     </div>
 
       <a id="trigger"><img class="thumbpic darken shadowrotate" src="/images/ThumbsUp.jpg"></a>
+
     </div>
   </div>
 
