--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -13,7 +13,7 @@
         </td>
         <td class="tilt">
             <img class="planlink shadow" src="/images/fiji/polaroidfiji.jpg">
-            <a href="Questionnare?loc=fiji&"><img class="planpic darken" src="/images/fiji/p1.jpg"></a>
+            <a href="Questionnare?loc=fiji&"><img class="planpic darken" src="/images/fiji1.jpg"></a>
         </td>
         <td class="tilt">
             <img class="planlink shadow" src="/images/hawaii/polaroidhawaii.jpg">
