fix image issue on planning page

--- a/views/Planning/page2.ejs
+++ b/views/Planning/page2.ejs
@@ -48,11 +48,11 @@
       q1 = unescape(temp[1]);
       temp = parameters[1].split("=");
 
-  		document.getElementById("planpic1").src = "images/" + q1 + "/p1.jpg";
-      document.getElementById("planpic2").src = "images/" + q1 + "/p2.jpg";
-      document.getElementById("planpic3").src = "images/" + q1 + "/p3.jpg";
-      document.getElementById("planpic4").src = "images/" + q1 + "/p4.jpg";
-      document.getElementById("planpic5").src = "images/" + q1 + "/p5.jpg";
+  		document.getElementById("planpic1").src = "images/" + q1 + "1.jpg";
+      document.getElementById("planpic2").src = "images/" + q1 + "2.jpg";
+      document.getElementById("planpic3").src = "images/" + q1 + "3.jpg";
+      document.getElementById("planpic4").src = "images/" + q1 + "4.jpg";
+      document.getElementById("planpic5").src = "images/" + q1 + "5.jpg";
   	}
   addComment();
 
