add images, fix survey page2 break

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -165,6 +165,11 @@ img.back{
 }
 form {
   font-size: 40px;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition: all 1s ease;
 }
 input {
   border: none;
@@ -195,6 +200,7 @@ input:focus {
   -moz-box-shadow: 0 0 45px rgba(0, 0, 0, 3);
   margin-right: 20px;
 }
+
 .spin {
   -webkit-transition: all 0.5s ease;
      -moz-transition: all 0.5s ease;
