--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -5,23 +5,36 @@
         <table>
         <tr>
           <td id="gc1" class="surveytext">How many people will vacation together?</td>
-          <input id="q1" class="permhidden" type="number" name="q1">
+          <td id="q1 answers" class="surveytext newClass"></td>
+
         </tr>
         <tr>
           <td id="gc2" class="surveytext newClass">What will a hotel generally cost per night?</td>
-          <input id="q2" class="permhidden" type="number" name="q2">
+          <td id="q2 answers" class="surveytext newClass"></td>
+
         </tr>
         <tr>
           <td id="gc3" class="surveytext newClass">How many days do you vacation in a year?</td>
-          <input id="q3" class="permhidden" type="number" name="q3">
+          <td id="q3 answers" class="surveytext newClass"></td>
+
         </tr>
         <tr>
           <td id="gc4" class="surveytext newClass">How many years do you plan on vacationing?</td>
-          <input id="q4" class="permhidden" type="number" name="q4">
+          <td id="q4 answers" class="surveytext newClass"></td>
+
         </tr>
         <tr>
           <td id="gc5" class="surveytext newClass">What do you think inflation will be in the next 10 years?</td>
-          <input id="q5" class="permhidden" type="number" name="q5">
+          <td id="q5 answers" class="surveytext newClass"></td>
+
+        </tr>
+        <tr>
+          <td></td>
+          <td id="answers" style="text-align: right;" class="surveytext newClass">----------</td>
+        </tr>
+        <tr>
+          <td id="surveydesc answers" class="surveytext newClass"></td>
+          <td id="survey6 answers" class="surveytext newClass"></td>
         </tr>
         <input class="permhidden" type="submit">
       </table>
