survey.js code mod

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -36,6 +36,7 @@
     <script src="/js/js/jquery.dataTables.js"></script>
     <script src="/js/odometer.js"></script>
     <script src="/js/splitparams.js"></script>
+    <script src="/page_js/survey.js"></script>
     <!--SCRIPTS END-->
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/app.css">
@@ -83,7 +84,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
