--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -22,19 +22,19 @@
       </tr>
       <tr>
         <td class="tilt">
-          <img class="planlink shadow" src="/images/polaroidtokyo.jpg">
+          <img class="planlink shadow" src="/images/polaroidTokyo.jpg">
           <a href="Questionnare?loc=tokyo&"><img class="planpic darken" src="/images/tokyo1.jpg"></a>
         </td>
         <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroiditaly.jpg">
+            <img class="planlink shadow" src="/images/polaroidItaly.jpg">
             <a href="Questionnare?loc=italy&"><img class="planpic darken" src="/images/italy1.jpg"></a>
         </td>
         <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroidrio.jpg">
+            <img class="planlink shadow" src="/images/polaroidRio.jpg">
             <a href="Questionnare?loc=rio&"><img class="planpic darken" src="/images/rio1.jpg"></a>
         </td>
         <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroidsydney.jpg">
+            <img class="planlink shadow" src="/images/polaroidSydney.jpg">
             <a href="Questionnare?loc=sydney&"><img class="planpic darken" src="/images/sydney1.jpg"></a>
         </td>
       </tr>
